PLAT-120930: Fixed Tab icon is not centered when large text
Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/TabLayout/TabGroup.module.less
+++ b/TabLayout/TabGroup.module.less
@@ -36,6 +36,7 @@
 			height: @sand-tablayout-tab-vertical-button-height;
 			.sand-custom-text({
 				font-size: @sand-tablayout-tab-font-size;
+				min-width: 0;
 			})
 		}
 
